[project]
name = "zenmarked"
version = "0.1.0"
description = "Standalone markdown editor with live preview and image support"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pillow>=10.0.0",
]

[project.scripts]
zenmarked = "zenmarked:main"

[tool.setuptools.packages.find]
include = ["zenmarked*"]

[tool.setuptools.package-data]
zenmarked = ["editor.html", "editor.css", "editor.js", "vendor/**/*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
